Update starship.toml with command_timeout and character symbol changes

--- a/dotfiles/starship.toml
+++ b/dotfiles/starship.toml
@@ -1,3 +1,5 @@
+command_timeout = 10000
+
 [aws]
 style = "bold #ffb86c"
 symbol = "  "
@@ -9,13 +11,8 @@ symbol = " "
 symbol = " "
 
 [character]
-
-# error_symbol = "[λ](bold #ff5555)"
-# success_symbol = "[λ](bold #50fa7b)"
-
-error_symbol   = "[  ](bold #ff5555)"
-success_symbol = "[█](bold #50fa7b)"
-# success_symbol = "[█](bold #50fa7b)"
+error_symbol   = "[](bold #ff5555)"
+success_symbol = "[](bold #50fa7b)"
 
 
 [cmd_duration]
